--- a/theme.html
+++ b/theme.html
@@ -29,6 +29,8 @@
     })();
     </script>
     {% endif %}
+    
+    <script src="//load.sumome.com/" data-sumo-site-id="27412d3fb5565e0579c079930263c2543a093908668651e7c18ba7eb47ee3d96" async="async"></script>
   </head>
   <body{% if is_post or is_tag or is_page %} class="short-header"{% endif %}>
 
